--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,4 +1,4 @@
-name: Compilar Código Java para EXE com GraalVM
+name: Compilar Código Java para EXE com jpackage
 
 on:
   push:
@@ -16,30 +16,26 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Configurar GraalVM
+    - name: Configurar JDK Temurin 11
       uses: actions/setup-java@v2
       with:
-        java-version: '21'
-        distribution: 'graalvm'
-
-    - name: Instalar Native Image
-      run: |
-        gu install native-image
+        java-version: '11'  # Usando Temurin 11
+        distribution: 'adoptopenjdk'
 
     - name: Compilar Projeto Java
       run: |
         mkdir -p build
         javac -d build src/**/*.java  # Compilar os arquivos Java
-        
-    - name: Criar Arquivo JAR
+
+    - name: Criar JAR
       run: |
         REPO_NAME=$(basename ${{ github.repository }})
         jar cvf build/$REPO_NAME.jar -C build .
 
-    - name: Compilar para Imagem Nativa (EXE)
+    - name: Criar EXE com jpackage
       run: |
         REPO_NAME=$(basename ${{ github.repository }})
-        native-image --no-fallback -H:Name=build/$REPO_NAME --enable-all-security-services --verbose -cp build/$REPO_NAME.jar
+        jpackage --input build --name $REPO_NAME --main-jar $REPO_NAME.jar --main-class your.main.Class --type exe --dest build/
 
     - name: Fazer Upload dos Arquivos JAR e EXE
       uses: actions/upload-artifact@v4
