fix windows paths

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -29,11 +29,11 @@ jobs:
 
     - name: Criar JAR
       run: |
-        jar cvf build/${{ github.repository }}.jar -C build .
+        jar cvf build/lfa.jar -C build .
 
     - name: Criar EXE com jpackage
       run: |
-        jpackage --input build --name ${{ github.repository }} --main-jar $${{ github.repository }}.jar --main-class org.example.Main.Class --type exe --dest build/
+        jpackage --input build --name lfa --main-jar lfa.jar --main-class org.example.Main.Class --type exe --dest build/
 
     - name: Fazer Upload dos Arquivos JAR e EXE
       uses: actions/upload-artifact@v4
