--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Criar JAR
       run: |
-        jar cfm build/myapp.jar MANIFEST.MF -C build .
+        jar cfm build/lfa.jar MANIFEST.MF -C build .
 
     - name: Criar EXE com jpackage
       run: |
